Kubernetes/complete-k8s/complete-backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: express-backend
  namespace: todo-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: express-backend
  template:
    metadata:
      labels:
        app: express-backend
    spec:
      containers:
      - name: express-backend
        image: prajyot7/todo-app-backend:latest
        ports:
        - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: express-backend
  namespace: todo-app
spec:
  ports:
  - port: 5000
    targetPort: 5000
  selector:
    app: express-backend
